# pstuart

./: .gitignore  CLAUDE.md  README.md  review-2026-04-02.md
plugins/pstuart-publishing/skills/book-publisher/: .gitignore  Makefile  SKILL.md  pyproject.toml
plugins/pstuart-publishing/skills/book-publisher/bookpub/: __init__.py  build_book.py  config.py  cover.py  discovery.py  embed_cover.py  epub_engine.py  fonts.py  index.py  migrate.py  onix.py  pdf_engine.py  preflight.py  qa_report.py  screenplay.py  text.py  with_covers.py
plugins/pstuart-publishing/skills/book-publisher/converters/: docx_to_markdown.py  text_to_markdown.py
plugins/pstuart-publishing/skills/book-publisher/references/: amazon-kdp-requirements.md  cover-generation.md  epub-generation.md  index-generation.md  manuscript-structure.md  pdf-generation.md
plugins/pstuart-publishing/skills/book-publisher/templates/: add_covers_to_pdf_template.py  compile_book_template.py  compose_interior_art_template.py  compose_kindle_cover_template.py  compose_paperback_wrap_template.py  create_kindle_cover_template.py  create_paperback_cover_template.py  epub_styles.css  generate_cover_art_template.py  generate_epub_template.py  generate_index_template.py  generate_pdf_template.py
plugins/pstuart-publishing/skills/book-publisher/tests/: conftest.py  test_build_book.py  test_compose_interior_art.py  test_compose_kindle_cover.py  test_compose_paperback_wrap.py  test_compose_paperback_zones.py  test_cover.py  test_cover_barcode.py  test_cover_config.py  test_cover_decor.py  test_cover_dimensions.py  test_text.py  (+16 more)
(+78 files in other folders)
